changed around characters

--- a/crystal-collector/index.html
+++ b/crystal-collector/index.html
@@ -15,21 +15,21 @@
 <body>
     <div class="container">
         <div class="jumbotron">
-            <h1 class="text-center">Collect That Stuff</h1>
+            <h1 class="text-center">Cartoon Collector</h1>
         </div>
         <div class="row mb-4">
             <div class="col-12 mb-1 mb-md-3 col-lg-6 mb-lg-0 d-flex flex-wrap justify-content-around align-content-around">
                 <button type="button" class="btn mx-3 mb-1 mb-lg-0 crystal" id="crystal-1" value="">
-                    <img src="./assets/images/beatles_paul.jpeg" alt="item-1" class="item-image">
+                    <img src="" alt="item-1" class="item-image">
                 </button>
                 <button type="button" class="btn mx-3 mb-1 mb-lg-0 crystal" id="crystal-2" value="">
-                        <img src="./assets/images/beatles_john.jpg" alt="item-2" class="item-image">
+                        <img src="" alt="item-2" class="item-image">
                 </button>
                 <button type="button" class="btn mx-3 mb-1 mb-lg-0 crystal" id="crystal-3" value="">
-                        <img src="./assets/images/beatles_george.jpeg" alt="item-3" class="item-image">
+                        <img src="" alt="item-3" class="item-image">
                 </button>
                 <button type="button" class="btn mx-3 mb-1 mb-lg-0 crystal" id="crystal-4" value="">
-                        <img src="./assets/images/beatles_ringo.jpeg" alt="item-4" class="item-image">
+                        <img src="" alt="item-4" class="item-image">
                 </button>
             </div>
             <div class="col-12 col-lg-6">
@@ -47,7 +47,7 @@
                     <div class="mb-1 mb-md-3 mb-lg-0 col-12 col-lg-6">
                         <div class="card" style="width: 100%;">
                             <div class="card-body">
-                                <h5 class="card-title text-center">Where'm I at?</h5>
+                                <h5 class="card-title text-center">Where am I at?</h5>
                                 <ul class="list-group">
                                     <li class="list-group-item scoreboard-field">
                                         Target Score:
@@ -64,7 +64,7 @@
                     <div class="col-12 col-lg-6">
                         <div class="card" style="width: 100%;">
                             <div class="card-body">
-                                <h5 class="card-title text-center">How'm I doin?</h5>
+                                <h5 class="card-title text-center">How am I doin?</h5>
                                 <ul class="list-group">
                                     <li class="list-group-item scoreboard-field">
                                         Wins:
@@ -91,12 +91,12 @@
                         <h5 class="card-title">Instructions</h5>
                         <p class="card-text">
                             <ul>
-                                <li>Click on them crystals to add points to your score, yo</li>
-                                <li>Each Crystal is worth a different number of points; you won't know how much until you click it, tho</li>
+                                <li>Click on the cartoon characters to add points to your score, yo</li>
+                                <li>Each cartoon character is worth a different number of points; you won't know how much until you click it, tho</li>
                                 <li>If you hit the target score, you win; if you go over, you lose, bro</li>
-                                <li>Each round, the value of the crystals will change, so...</li>
-                                <li>Keep your wits about you and see if you can become a collecting crystal pro</li>
-                                <li>(honestly, its not that hard... just click on the crystals and try to reach the target score)</li>
+                                <li>Each round, the cartoon characters and their values will change, so...</li>
+                                <li>Keep your wits about you and see if you can become a cartoon character collecting pro</li>
+                                <li>(honestly, its not that hard... just click on the buttons and try to reach the target score)</li>
                             </ul>
                         </p>
                     </div>
