in the middle of star wars game

--- a/crystal-collector/index.html
+++ b/crystal-collector/index.html
@@ -29,7 +29,7 @@
                         <img src="" alt="item-3" class="item-image">
                 </button>
                 <button type="button" class="btn mx-3 mb-1 mb-lg-0 crystal" id="crystal-4" value="">
-                        <img src="" alt="item-4" class="item-image">
+                        <img src="git add-" alt="item-4" class="item-image">
                 </button>
             </div>
             <div class="col-12 col-lg-6">
