added main page with links to both games

--- a/star-wars/star-wars.html
+++ b/star-wars/star-wars.html
@@ -50,6 +50,7 @@
                 <button id="attack-button">Attack!</button>
                 <div>Damage Inflicted:<span id="damage-inflicted"></span></div>
                 <div>Damage Sustained:<span id="damage-sustained"></span></div>
+                <div>massage:<span id="message-text"></span></div>
             </div>
             <div id="opponent-field" class="col-4 opponent-field">opponent</div>
         </div>
@@ -59,7 +60,12 @@
                 defeated
             </div>
         </div> 
+
+        <a class="btn btn-primary mt-3" href="../index.html">go back to week 4 main page</a>
     </div>
+
+    
+    
 
     <!-- linking javascript  -->
     <script src="./assets/javascript/game.js"></script>
