--- a/crystal-collector/crystal-collector.html
+++ b/crystal-collector/crystal-collector.html
@@ -105,6 +105,8 @@
             </div>
             </div>
         </div>
+
+        <a class="btn btn-primary my-3" href="../index.html">go back to week 4 main page</a>
         
     </div>
     
