some more updates

--- a/star-wars/star-wars.html
+++ b/star-wars/star-wars.html
@@ -56,10 +56,18 @@
         </div>
 
         <div class="row">
-            <div class="col-12 defeated-field">
+            <div id="defeated-field" class="col-12 defeated-field">
                 defeated
             </div>
         </div> 
+
+        <div class="card game-end-card" >
+            <div class="card-body">
+                <h5 id="game-end-title" class="card-title">hello!</h5>
+                <p id="game-end-text" class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <button id="game-end-ok-btn" class="btn btn-primary">ok</button>
+            </div>
+        </div>
 
         <a class="btn btn-primary mt-3" href="../index.html">go back to week 4 main page</a>
     </div>
