--- a/star-wars/star-wars.html
+++ b/star-wars/star-wars.html
@@ -48,9 +48,12 @@
             <div id="user-character-field" class="col-4 user-character-field">user character</div>
             <div class="col-4">
                 <button id="attack-button">Attack!</button>
+                <div>Message: <br>
+                    <span id="message-text"></span>
+                </div>
                 <div>Damage Inflicted:<span id="damage-inflicted"></span></div>
                 <div>Damage Sustained:<span id="damage-sustained"></span></div>
-                <div>massage:<span id="message-text"></span></div>
+                
             </div>
             <div id="opponent-field" class="col-4 opponent-field">opponent</div>
         </div>
